--- a/frontend/usuarios.css
+++ b/frontend/usuarios.css
@@ -98,22 +98,72 @@ header h1 {
     transition: background-color 0.3s ease;
 }
 
-.icono-eliminar {
-    flex: 0.5;
-    text-align: center;
+.btn-eliminar {
+    background-color: red;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 3px;
 }
 
-.icono-eliminar button {
-    background-color: #ff6347;
-    color: #fff;
-    border: none;
+
+.barra-busqueda {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+#usuario-id {
+    width: 300px;
+    padding: 10px;
+    border: 1px solid #ddd;
     border-radius: 5px;
-    padding: 10px 20px;
+    font-size: 16px;
+    margin-right: 10px;
+    outline: none;
+    transition: border-color 0.3s;
+}
+
+#usuario-id:focus {
+    border-color: #4e85ff;
+}
+
+.btn-buscar {
+    background-color: #4e85ff;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    font-size: 16px;
+    border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
-.icono-eliminar button:hover {
-    background-color: #ff0000;
+.btn-buscar:hover {
+    background-color: #1e60ee;
 }
 
+.btn-buscar:active {
+    background-color: #124ab6;
+}
+
+.btn-mostrar-todos {
+    background-color: #28a745;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-left: 10px; /* Separación del botón de búsqueda */
+}
+
+.btn-mostrar-todos:hover {
+    background-color: #218838;
+}
+
+.btn-mostrar-todos:active {
+    background-color: #1c7430;
+}
